# bender

./: Cargo.toml
src/: core.rs  errors.rs  main.rs  model.rs  processing.rs  traits.rs
src/core/: mod.rs  model_manager.rs
src/processing/: classifier.rs  feedback_generator.rs  speech_synthesizer.rs
